--- a/music-app/package.json
+++ b/music-app/package.json
@@ -9,7 +9,7 @@
     "@typescript-eslint/parser": "1.6.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
     "better-scroll": "^1.15.2",
@@ -35,6 +35,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "jsonp": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -48,7 +49,10 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-lazyload": "^2.6.2",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-transition-group": "^4.2.1",
+    "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
